<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.DetailUserActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/detail_avatar"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginTop="16dp"
        android:src="@android:color/darker_gray"
        app:civ_border_color="#FF909090"
        app:civ_border_width="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints,ImageContrastCheck" />

    <TextView
        android:id="@+id/detail_username"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/username"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detail_avatar" />

    <TextView
        android:id="@+id/detail_name"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/name"
        android:textSize="16sp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detail_username" />

    <TextView
        android:id="@+id/detail_followers"
        android:layout_width="55dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="88dp"
        android:gravity="center"
        android:text="@string/number"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/followers_number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detail_name"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/detail_followings"
        android:layout_width="55dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="91dp"
        android:gravity="center"
        android:text="@string/number"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/followings_number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detail_name"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/followings_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="24dp"
        android:gravity="center"
        android:text="@string/followings"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/detail_tabs"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/followers_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/followers"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/detail_tabs"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/detail_tabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@color/gainsboro"
        android:minHeight="?actionBarSize"
        app:layout_constraintBottom_toTopOf="@+id/view_pager_detail"
        app:layout_constraintTop_toBottomOf="@+id/detail_name"
        app:layout_constraintVertical_bias="1.0"
        app:tabIndicatorFullWidth="false"
        app:tabIndicatorHeight="2dp"
        app:tabMode="fixed"
        app:tabRippleColor="@null"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        android:contentDescription="@string/follows" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/view_pager_detail"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:layout_marginTop="375dp" />

    <ProgressBar
        android:id="@+id/progressBarDetail"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.396"
        tools:ignore="MissingConstraints" />

    <ToggleButton
        android:id="@+id/tb_fav"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/ic_toggle_favorite"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:textOff=""
        android:textOn=""
        app:layout_constraintStart_toStartOf="@+id/detail_avatar"
        app:layout_constraintTop_toTopOf="@+id/detail_avatar" />

    <!--    <com.google.android.material.floatingactionbutton.FloatingActionButton-->
<!--        android:id="@+id/fav_add"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_margin="16dp"-->
<!--        android:contentDescription="@string/favorite"-->
<!--        android:foregroundGravity="bottom"-->
<!--        app:fabSize="normal"-->
<!--        app:layout_anchorGravity="bottom|end"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:srcCompat="@drawable/ic_toggle_favorite"-->
<!--        tools:ignore="ImageContrastCheck" />-->

</androidx.constraintlayout.widget.ConstraintLayout>